--- a/JS/02闭包.md
+++ b/JS/02闭包.md
@@ -1,7 +1,31 @@
-### 闭包
+## 闭包
 一个函数和对其周围状态（lexical environment，词法环境）的引用捆绑在一起（或者说函数被引用包围），这样的组合就是闭包（closure）。也就是说，<b>闭包让你可以在一个内层函数中访问到其外层函数的作用域。</b>在 JavaScript 中，每当创建一个函数，闭包就会在函数创建的同时被创建出来。   
 简单理解，<b>闭包是指有权访问另外一个函数作用域中的变量的函数</b>   
 
+#### 闭包的一个重要作用
+利用闭包的特性，可以将闭包看作一个 能够记忆函数变量 并 在函数运行完毕后继续访问函数变量的 方法  
+下面就是 指向内层add()的引用 用来 记忆外层变量的 一个例子   
+```
+function makeAdder(x) {
+    function add(y) {
+        return x + y;
+    }
+    return add;
+}
+
+var plusOne = makeAdder( 1 )
+var plusTen = makeAdder( 10 )
+console.log(plusOne( 3 )) // 4
+console.log(plusOne( 6 )) // 7
+console.log(plusTen( 20 )) //30
+```
+> 详细解释：
+> **makeAdder( 1 ) 返回一个add() 的一个引用，它记忆了 x = 1 ，将这个引用赋值给 plusOne**
+var plusOne = makeAdder( 1 )  就相当于 var plusOne = add( y ) { return 1 + y; }
+ plusOne( 3 ) 就是调用 plusOne，并传入参数 3 ，此时 3 传给了 记忆了 x = 1 的 add () 的这个引用，相当于 add( 3 ) { return 1 + 3; }
+
+
+#### 闭包在循环中运用          
 ##### 未使用闭包
 执行完for循环后，data是[Function (anonymous),Function (anonymous),Function (anonymous)]的形式,因为以下代码只是将函数赋值给data[i],并没有执行。
 ```
@@ -52,7 +76,29 @@ data[1]();//1
 data[2]();//2
 ```
 
-#### 闭包使用经典场景
+#### 闭包与模块模式
+前言： 
+模块允许定义外部不可见的私有细节（变量、函数），同时也提供允许外部访问的公开API。  
+```
+function User() {
+    var userName;
+    var passWord;
+    function doLogin(user,pw) {
+        userName = user;
+        passWord = pw;
+    }
+
+    var publicAPI = {
+        login: doLogin
+    }
+    return publicAPI;
+}
+var test = User();
+test.login('test','111111')
+```
+> 执行 User() 时，创建了一个User模块的一个实例，这会创建一个新的作用域。这个实例返回 publicAPI 对象，publicAPI 中的 login 是对内层函数 doLogin 的一个引用，而 doLogin 形成一个在userName和passWord上的闭包，所以当 var test = User();执行完毕， userName、passWord 这两个User的内层变量依旧可以访问。
+
+#### 闭包的其他经典使用场景
 1. return 回一个函数
 2. 函数作为参数
 3. IIFE（自执行函数）
