--- a/JS/02闭包.md
+++ b/JS/02闭包.md
@@ -26,7 +26,8 @@ var plusOne = makeAdder( 1 )  就相当于 var plusOne = add( y ) { return 1 + y
 
 
 #### 闭包在循环中运用          
-##### 未使用闭包
+##### 例子1 
+###### 未使用闭包
 执行完for循环后，data是[Function (anonymous),Function (anonymous),Function (anonymous)]的形式,因为以下代码只是将函数赋值给data[i],并没有执行。
 ```
 data[i] = function() {
@@ -49,8 +50,7 @@ data[0](); //3
 data[1](); //3
 data[2](); //3
 ```
-
-##### 使用闭包
+###### 使用闭包
 这里用匿名函数实现了闭包   
 也就是内部return的这个函数和当时这个函数所定义的环境中   
 这里把立即执行函数赋值给data[i],并把当前循环的i作为实参传入这个立即执行的匿名函数。    
@@ -75,7 +75,29 @@ data[0]();//0
 data[1]();//1
 data[2]();//2
 ```
+##### 例子2
+###### 未使用闭包
+```
+for (var i = 0; i < 3; i++) {
+    setTimeout(function () {
+        console.log(i);  // 3 3 3
+        //在执行到这一行时，发现匿名函数里没有i，然后向往外部作用域找，然后找到的其实是for循环执行完了的i，也就是2++，3
+        // 参考事件循环机制
+    }, 1000);
+}
 
+```
+###### 使用闭包
+```
+for (var i = 0; i < 3; i++) {
+    (function (x) {
+        setTimeout(function () {
+            console.log(x);  // 0 1 2
+        }, 1000);
+    })(i)
+    //i传给了x，并且锁在内存中，所以不会变
+}
+```
 #### 闭包与模块模式
 前言： 
 模块允许定义外部不可见的私有细节（变量、函数），同时也提供允许外部访问的公开API。  
