--- a/JS/02闭包.md
+++ b/JS/02闭包.md
@@ -100,7 +100,11 @@ for (var i = 0; i < 3; i++) {
 ```
 #### 闭包与模块模式
 前言： 
-模块允许定义外部不可见的私有细节（变量、函数），同时也提供允许外部访问的公开API。  
+模块允许定义外部不可见的私有细节（变量、函数），同时也提供允许外部访问的公开API。下面的User 就是一个模块      
+所谓的模块模式,必须具备**两个必要条件**:   
+1. **必须有外部的封闭函数,该函数至少被调用一次**(每次调用都会创建一个新的模块实例,比如下面的User(),每调用一次就创建一个实例)    
+2. **封闭函数必须返回一个内部函数**,这样函数内部才能在私有作用域中形成闭包,并可以访问或者修改私有的状态.
+
 ```
 function User() {
     var userName;
@@ -118,7 +122,60 @@ function User() {
 var test = User();
 test.login('test','111111')
 ```
-> 执行 User() 时，创建了一个User模块的一个实例，这会创建一个新的作用域。这个实例返回 publicAPI 对象，publicAPI 中的 login 是对内层函数 doLogin 的一个引用，而 doLogin 形成一个在userName和passWord上的闭包，所以当 var test = User();执行完毕， userName、passWord 这两个User的内层变量依旧可以访问。
+###### 两个理解点
++ doLogin 引用了模块的私有变量，形成了一个闭包，也就是User的内部作用域
++ publicAPI 这个对象的返回值可以看作是 User模块的一个公共API，把其赋值给外部变量，就可以通过它来访问API中的属性方法，比如 test.login()
+###### 代码理解
+> 执行 User() 时，创建了一个User模块的一个实例，这会创建一个新的作用域。这个实例返回 publicAPI 对象，publicAPI 中的 login 是对内层函数 doLogin 的一个引用，而 doLogin 形成一个在 userName 和 passWord 上的闭包，所以当 var test = User();执行完毕， userName、passWord 这两个User的内层变量依旧可以访问。
+
+也可以通过返**回对象字面量语法**来表示对象,如下:
+```
+function User() {
+  var userName;
+  var passWord;
+  var regisText = '注册注册';
+  function doLogin(user,pw) {
+      userName = user;
+      passWord = pw;
+      console.log(userName,passWord)
+  }
+  function doResgister() {
+    console.log(regisText)
+  }
+
+  return {
+    login: doLogin,
+    register: doResgister
+  }
+}
+var test = User();
+test.login('test','111111')
+test.register()
+// test 111111
+// 注册注册
+```
+模块也是函数,可以传参.并且模块模式**还可以从内部对模块实例进行修改,以达到修改公共API的效果**. 如下:
+```
+var foo = (function TestModules(text) {
+  function change() {
+    publicAPI.testFun = testFuntwo; // 修改公共API
+  }
+  function testFunone() {
+    console.log(text);
+  }
+  function testFuntwo() {
+    console.log(text.toUpperCase())
+  }
+  var publicAPI = {
+    change:change,
+    testFun: testFunone,
+  };
+  return publicAPI;
+})("foo muodule");
+foo.testFun() //foo muodule
+foo.change()
+foo.testFun() //FOO MUODULE
+```
 
 #### 闭包的其他经典使用场景
 1. return 回一个函数
