--- a/Navigation project/实现换肤功能.md
+++ b/Navigation project/实现换肤功能.md
@@ -18,3 +18,133 @@
       }
     },
     ```
+
+
+#### 通过更改css变量值 实现换肤
+ei.....上面的方法实在是太偷懒了，操作dom性能也不好。今天又碰到了需要换肤的需求，这里补充一个用less+vue，通过修改css变量来实现换肤的方法。
+##### 1.下载依赖  
+```
+npm install style-resources-loader -D
+npm install vue-cli-plugin-style-resources-loader -D
+
+npm install less-loader@5.0.0 --save
+npm install less --save
+
+```
+##### 2. 修改配置文件vue.config.js  
+加入以下配置  
+```
+module.exports = {
+    pluginOptions: {
+      "style-resources-loader": {
+        preProcessor: "less",
+        patterns: [
+          // 这个是加上自己的路径,不能使用(如下:alias)中配置的别名路径
+          path.resolve(__dirname, "./public/css/theme.less"),
+        ],
+      },
+    }
+}
+```
+##### 3. 新建less文件，写一些换肤设计的样式     
+variable.less文件：
+```
+@normalFontSizeLittle: var(--normalFontSizeLittle,15px);
+@normalFontSizeBig: var(--normalFontSizeBig,20px);
+@backgroundColor: var(--backgroundColor,#ffdc00);
+<!-- 不修改变量名 以下 则可以省略 -->
+/* :export{
+  name: "less";
+  normalFontSizeBig:@normalFontSizeBig;
+  normalFontSizeLittle:@normalFontSizeLittle;
+  backgroundColor：@backgroundColor;
+}
+*/
+```  
+##### 4. 新建model.js，写入两套不同的样式  
+```
+export const themes = {
+    default: {
+        normalFontSizeBig: "20px",
+        normalFontSizeLittle: "15px",
+        backgroundColor: "#ffdc00"
+    },
+    older: {
+        normalFontSizeBig: "30px",
+        normalFontSizeLittle: "25px",
+        backgroundColor: "#007acc"
+    }
+}
+```  
+##### 5. 新建theme.js，实现具体的换肤方法  
+```
+import { themes } from "../js/model";
+
+// 更改全局css变量值的方法
+const changeStyle = (obj) => {
+  for (let key in obj) {
+    document.getElementsByTagName("body")[0].style.setProperty(`--${key}`, obj[key]);
+  }
+};
+
+//切换主题的方法
+export const setTheme = (themeName) => {
+  // 存入 切换后的主题名称,下次进入使用该主题
+  localStorage.setItem("theme", themeName);
+  const themeConfig = themes[themeName];
+  // 如果有主题名称，那么则采用我们定义的主题
+  if (themeConfig) {
+    localStorage.setItem("normalFontSizeBig", themeConfig.normalFontSizeBig);
+    localStorage.setItem("normalFontSizeLittle",themeConfig.normalFontSizeLittle);
+    localStorage.setItem("backgroundColor",themeConfig.backgroundColor);
+    changeStyle(themeConfig);
+  } else {
+    let themeConfig = {
+      normalFontSizeBig: localStorage.getItem("normalFontSizeBig"),
+      normalFontSizeLittle: localStorage.getItem("normalFontSizeLittle"),
+    };
+    changeStyle(themeConfig);
+  }
+};
+
+```  
+##### 6. 在需要实现换肤的.vue页面中引用并使用     
+6.1 设置样式
+```
+<style lang="less" scoped>
+.home {
+  font-size: @normalFontSizeBig;
+  background-color: @backgroundColor;
+}
+</style>
+```
+6.2 引入换肤方法
+ ```import { setTheme } from "../../public/js/theme";```  
+ 
+6.3 在data中定义默认模式  
+```
+  data() {
+    return {
+      theme: "default",
+    }
+  },
+```
+6.4 调用换肤方法
+```
+  create() {
+    this.init();
+  },
+  methods: {
+    init() {
+      setTheme(this.theme);
+    },
+    changeTheme() {
+      if (this.theme == "default") {
+        this.theme = "older";
+      } else {
+        this.theme = "default";
+      }
+      setTheme(this.theme);
+    },
+  },
+```
