--- a/work/08.md
+++ b/work/08.md
@@ -54,7 +54,38 @@ Pinia 等。
    + 请求前移，通过 props 进行数据传递。
    + 利用全局变量来存数据。
 #### 5. keep-alive带来的内存问题
-解决：不需要缓存的路由，移出keep-alive
+解决：不需要缓存的路由，移出keep-alive   
+方法👌：
+1. 在路由配置中，添加一个字段用于控制是否需要缓存
+    ```
+    {
+      path: '/componentA',
+      name: 'componentA',
+      component: () => import('@/views/componentA/index.vue'),
+      meta: {
+       keepAlive: true 
+      }
+   },
+   {
+      path: '/componentB',
+      name: 'componentB',
+      component:() => import('@/views/componentA/index.vue'),
+      meta: {
+        keepAlive: false
+      }
+   },
+    ```
+2. APP.vue中进行判断，仅将需要缓存的放到 keep-alive 中 
+   ```
+   <template>
+     <div id="app">
+       <keep-alive v-if="$route.meta.keepAlive">
+         <router-view class="page"></router-view>
+       </keep-alive>
+       <router-view class="page" v-else></router-view>
+     </div>
+   </template>
+   ```
 #### 6. v-if带来的内存泄漏
 可以让v-if为false时  将相关的数据 手动清除
 #### 7.其他的一些日常措施  
