--- a/work/11.md
+++ b/work/11.md
@@ -1,6 +1,6 @@
 
-### RegExp
-#### 1. exec()
+## RegExp
+### 1. exec()
 + exec()只有一个参数，即要应用模式的字符串
 + 找到了匹配项，则返回包含第一个匹配信息的数组；没找到则返回 null
 + 这个数组的第一个元素是匹配整个模式的字符串，其他元素是与表达式中的捕获组匹配的字符串
@@ -28,7 +28,7 @@ console.log('index: ',mat.index, 'input: ',mat.input)
 index:  0 input:  AA BB BB CC DD
 ```
 
-##### exec() 是否设置全局匹配
+#### exec() 是否设置全局匹配
 + 没有全局标识 g ，不管调用几次exec(),始终返回第一个匹配的信息
 + 有全局表示 g，每次调用exec(),都会向前搜索下一个匹配项  
 :clapper:：**未设置全局匹配时，使用exec()**
@@ -73,7 +73,7 @@ index:  0 input:  AA BB BB CC DD
   第5次调用exec() null
 
    ```
-##### exec() 是否设置粘附标记 y
+#### exec() 是否设置粘附标记 y
 + 设置 粘附标记 y，则只会从 lastIndex 位置开始寻找匹配项
 + lastIndex 为上次匹配的 最后一个字符 的 索引
 
@@ -105,7 +105,7 @@ index:  0 input:  AA BB BB CC DD
   ```
   > 以索引为3开头的字符串找不到匹配项， 这里手动设置 ```pattern2.lastIndex = 5```,即可找到下一个匹配项。
 
-#### 2. test()
+### 2. test()
 > exec()可以检索字符串的匹配情况，但 test() 只能用于测试是否匹配，不能给出实际的匹配内容。匹配返回true，否则返回false。
 
 :book: 例子
