--- a/work/11.md
+++ b/work/11.md
@@ -114,3 +114,19 @@ let pattern = /\<\=/g
 let str = "1<=2"
 console.log(pattern.test(str)) //true
 ```
+
+:sunglasses:一个小补充
+字符串的 match()方法本质上与正则的 exec()方法是一样的
+```
+let text = "cat, bat, sat, fat";
+let pattern2 = /.at/;
+console.log(text.match(pattern2))
+// [ 'cat', index: 0, input: 'cat, bat, sat, fat', groups: undefined ]
+```
+字符串的replace()方法，也可以结合正则使用
+```
+let text = "cat, bat, sat, fat";
+let pattern2 = /.at/;
+console.log(text.replace(pattern2, '--'))
+// --, bat, sat, fat
+```
