--- a/work/12.md
+++ b/work/12.md
@@ -1,4 +1,5 @@
 # JavaScript高级程序设计——笔记
+[toc]
 ## Array 的 ES6 新增 与 排序
 ### 1.Array —— from() 与 of() 
 Array构造函数有两个ES6新增的用于创建数组的静态方法：
@@ -86,7 +87,7 @@ console.log(Array.of(1,2,3,4)) // [ 1, 2, 3, 4 ]
 + **values() 返回数组元素的迭代器**
 + **entries() 返回数组索引/元素对 的迭代器**
 
-:pencil2: 例子：
+ ##### :pencil2:keys() 、 values() 、 entries() 例子
 ```
 const arr = ['11','22','33']
 console.log(arr.keys(), '转换为数组：', Array.from(arr.keys()))
@@ -107,25 +108,28 @@ for(let [id,element] of arr.entries()) {
 // 2 -- 33
 ```
 ### 3.Array —— copyWithin () 与 fill ()
-+ **fill ()** 
-   向一个已有的数组中插入全部或部分相同的值
-   第二个参数 用于指定开始填充的位置，它是可选的。
-   第三个参数 用于指定结束填充的位置，它是可选的。如果不提供结束索引，则一直填充到数组末尾。负值索引从数组末尾开始计算.
-   :pencil2: 例子：
-      ```let arr = [1,1,1,1,1,1]``` 
+##### fill () 
+   + 向一个已有的数组中插入全部或部分相同的值
+   + 第二个参数 用于指定开始填充的位置，它是可选的。
+   + 第三个参数 用于指定结束填充的位置，它是可选的。如果不提供结束索引，则一直填充到数组末尾。负值索引从数组末尾开始计算.
+
+:pencil2: 例子：
+  ```let arr = [1,1,1,1,1,1]``` 
    + ```arr.fill(6) ```  ------> ```[ 6, 6, 6, 6, 6, 6 ]```
    + ```arr.fill(6,3)```----->```[ 1, 1, 1, 6, 6, 6 ]```
    + ```arr.fill(6,1,3)```--->```[ 1, 6, 6, 1, 1, 1 ]```
    + ```arr.fill(6,-3,-1)```---> ```[ 1, 1, 1, 6, 6, 1 ]```
-  **fill() 会忽略超出数组边界、零长度及方向相反的索引范围：**
+
+**fill() 会忽略超出数组边界、零长度及方向相反的索引范围：**
    + ```arr.fill(6,3,1)```---->```[ 1, 1, 1, 1, 1, 1 ]```  方法相反
    + ```arr.fill(6,10)```---->```[ 1, 1, 1, 1, 1, 1 ]```   超出边界
 
-+ **copyWithin ()**
-会按照指定范围浅复制数组中的部分内容，然后将它们插入到指定索引开始的位置.
-   第二个参数 用于指定开始填充的位置，它是可选的。
-   第三个参数 用于指定结束填充的位置，它是可选的。如果不提供结束索引，则一直填充到数组末尾。负值索引从数组末尾开始计算.
-   :pencil2: 例子：
+##### copyWithin ()
++ 会按照指定范围浅复制数组中的部分内容，然后将它们插入到指定索引开始的位置.
++ 第二个参数 用于指定开始填充的位置，它是可选的。
++ 第三个参数 用于指定结束填充的位置，它是可选的。如果不提供结束索引，则一直填充到数组末尾。负值索引从数组末尾开始计算.
+
+:pencil2: 例子：
    ```let ints = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]```
    + ```ints.copyWithin(5)``` ----> ```[0, 1, 2, 3, 4, 0, 1, 2, 3, 4]```   复制索引0开始的内容，插入到索引5开始的位置
    + ```ints.copyWithin(0, 5);``` ----> ```[5, 6, 7, 8, 9, 5, 6, 7, 8, 9]```   复制索引5开始的内容，插入到索引0开始的位置  
