--- a/work/12.md
+++ b/work/12.md
@@ -1,6 +1,5 @@
-# JavaScript高级程序设计——笔记
+# Array
 [toc]
-## Array 的 ES6 新增 与 排序
 ### 1.Array —— from() 与 of() 
 Array构造函数有两个ES6新增的用于创建数组的静态方法：
 from() 和 of() 。
@@ -171,4 +170,76 @@ function compare(value1,value2) {
 arr.sort(compare)
 console.log(arr) 
 // [ 45, 10, 6, 3, 1 ]
+```
+
+### 5.迭代方法
+ECMAScript为数组定义了5个迭代方法。每个方法接收两个参数：以每一项为参数运行的函数，以及可选的作为函数运行上下文的作用域对象（影响函数中 this 的值）。
+传给每个方法的函数接收3个参数：数组元素、元素索引和数组本身。因具体方法而异，这个函数的执行结果可能会也可能不会影响方法的返回值。
+数组的5个迭代方法如下。
++ **every()** ：对数组每一项都运行传入的函数，如果对每一项函数都返回 true ，则这个方法返回 true 。
++ **filter()** ：对数组每一项都运行传入的函数，函数返回 true 的项会组成数组之后返回。
++ **forEach()** ：对数组每一项都运行传入的函数，没有返回值。
++ **map()** ：对数组每一项都运行传入的函数，返回由每次函数调用的结果构成的数组。
++ **some()** ：对数组每一项都运行传入的函数，如果有一项函数返回true ，则这个方法返回 true 。
+```js
+let numbers = [1, 2, 3, 4, 5, 4, 3, 2, 1];
+
+let res1 = numbers.every((item) => item > 2)
+console.log(res1) // false
+
+let res2 = numbers.some(item => item > 2)
+console.log(res2) // true
+
+let res3 = numbers.filter(item => item > 2)
+console.log(res3) // [ 3, 4, 5, 4, 3 ] 
+
+let res4 = numbers.map(item => item * 2)
+console.log(res4) //[ 2, 4, 6, 8, 10, 8, 6, 4, 2]
+
+numbers.forEach(item => {
+  console.log(item*2) // 2 4 6 8 10 8 6 4 2
+})
+```
+### 6.归并方法
+##### reduce() —— 从数组第一项开始遍历到最后一项
+##### reduceRight() —— 从最后一项开始遍历至第一项
+
+这两个方法都接收两个参数：
+  + **对每一项都会运行的归并函数**
+    这个归并函数有四个参数：上一个归并值、当前项、当前项的索引、数组本身  
+    这个函数返回的任何值都会作为下一次调用同一个函数的第一个参数
+  + **归并起点的初始值**(可选，若不指定，默认第一次迭代将从数组的第二项开始)。
+
+
+
+```js
+let nmu = [1,2,3,4,5]
+let sum = nmu.reduce((prev,cur,index,arr)=>{
+  console.log(prev,cur,index,arr);
+  return prev + cur
+})
+console.log(sum) // 15
+
+输出：
+1 2 1 [ 1, 2, 3, 4, 5 ]
+3 3 2 [ 1, 2, 3, 4, 5 ]
+6 4 3 [ 1, 2, 3, 4, 5 ]
+10 5 4 [ 1, 2, 3, 4, 5 ]
+15
+```
+```js
+let nmu = [1,2,3,4,5]
+let sum = nmu.reduce((prev,cur,index,arr)=>{
+  console.log(prev,cur,index,arr);
+  return prev + cur
+},3)
+console.log(sum) // 18
+
+输出：
+3 1 0 [ 1, 2, 3, 4, 5 ]
+4 2 1 [ 1, 2, 3, 4, 5 ]
+6 3 2 [ 1, 2, 3, 4, 5 ]
+9 4 3 [ 1, 2, 3, 4, 5 ]
+13 5 4 [ 1, 2, 3, 4, 5 ]
+18
 ```
