--- a/work/12.md
+++ b/work/12.md
@@ -171,7 +171,13 @@ arr.sort(compare)
 console.log(arr) 
 // [ 45, 10, 6, 3, 1 ]
 ```
-
+:strawberry: [一个案例](./12.html)
+>案例描述
+ 实现以下功能：
+>1.列表只展示数组中的name属性
+>2.实现点击"销量升序"按钮，列表内容按照销量升序重新渲染
+>3.实现点击"销量降序"按钮，列表内容按照销量降序重新渲染
+>注意：必须使用DOM0级标准事件（onclick）
 ### 5.迭代方法
 ECMAScript为数组定义了5个迭代方法。每个方法接收两个参数：以每一项为参数运行的函数，以及可选的作为函数运行上下文的作用域对象（影响函数中 this 的值）。
 传给每个方法的函数接收3个参数：数组元素、元素索引和数组本身。因具体方法而异，这个函数的执行结果可能会也可能不会影响方法的返回值。
