--- a/work/08.md
+++ b/work/08.md
@@ -100,6 +100,7 @@ Pinia 等。
 
 
 #### 实现图片的懒加载  
+:pencil: **通过监听滚动实现：**
 ```
 <template>
   <div class="home-pic">
@@ -180,3 +181,20 @@ img {
 > ```<img src="../assets/haha.jpg" data-url="../assets/haha.jpg" />```  
 > 2.取该属性使用  ```dataset.XXX```   如：
 > ```mg.src = item.dataset.url;```
+
+:pencil: **通过 v-lazy 实现：**
+1. 安装插件 
+   ```js
+   npm install vue-lazyload
+   ```
+2. main.js中引入并使用
+   ```js
+   import VueLazyload from 'vue-lazyload'
+   Vue.use(VueLazyload) 
+   ```
+3. 使用懒加载
+   ```js
+   //直接将 ':src' 替换为 'v-lazy' 即可
+   <img v-lazy="img.src" >
+   <img :src="img.src" >
+   ```
