:sparkles:一些提高效率的小技巧

--- a/work/12.md
+++ b/work/12.md
@@ -249,3 +249,76 @@ console.log(sum) // 18
 13 5 4 [ 1, 2, 3, 4, 5 ]
 18
 ```
+
+### 一些提高效率的小技巧 :boom:
+##### :pushpin: reduce() 快速 求和、找最大 / 最小值
+  ```js
+  const array  = [1, 2, 3, 4, 5];
+  ```
++ 和
+  ```js
+  array.reduce((a, b) => a + b); // 15
+  ```
++ 最大值
+  ```js
+  array.reduce((a, b) => a > b ? a : b); // 5
+  ```
++ 最小值
+  ```js
+  array.reduce((a, b) => a < b ? a : b); // 1
+  ```
+##### :pushpin: 对字符串、数字或对象数组进行排序
++ 字符串
+  直接用内置的方法sort()和reverse()
+  ```js
+  const stringArr = ["Joe", "Kapil", "Steve", "Musk"]
+  console.log(stringArr.sort()) 
+  // [ 'Joe', 'Kapil', 'Musk', 'Steve' ]
+  console.log(stringArr.reverse()) 
+  // [ 'Steve', 'Musk', 'Kapil', 'Joe' ]
+  ```
++ 数字
+  ```js
+  const array  = [40, 100, 1, 5, 25, 10];
+
+  array.sort((a,b) => a-b);
+  // [1, 5, 10, 25, 40, 100]
+
+  array.sort((a,b) => b-a);
+  // [100, 40, 25, 10, 5, 1]
+  ```
++ 对象数组
+  ```js
+  const objectArr = [
+    { first_name: "Lazslo", last_name: "Jamf" },
+    { first_name: "Pig", last_name: "Bodine" },
+    { first_name: "Pirate", last_name: "Prentice" },
+  ];
+  objectArr.sort((a, b) => a.last_name.localeCompare(b.last_name))
+
+  //输出：
+  //[
+  //  { first_name: 'Pig', last_name: 'Bodine' },
+  //  { first_name: 'Lazslo', last_name: 'Jamf' },
+  //  { first_name: 'Pirate', last_name: 'Prentice' }
+  //]
+  ```
+
+##### :pushpin: 从数组中过滤虚假值
+用```array.filter(Boolean)```可以忽略数组中的 0，undefined，null, false，""，''
+```js
+const array = [3, 0, 6, 7, '', false, null, undefined, 'aaa'];
+console.log(array.filter(Boolean)) // [ 3, 6, 7, 'aaa' ]
+```
+##### :pushpin: 删除重复值
+```js
+const array = [1, 2, 1, 3, 4, 4, 5];
+let res = array.filter((item, idx, arr) => arr.indexOf(item) === idx);
+console.log(res); // [ 1, 2, 3, 4, 5 ]
+
+// 或者利用集合Set
+const nonUnique = [...new Set(array)];
+console.log(nonUnique); // [ 1, 2, 3, 4, 5 ]
+```
+
+[:mag:参考文档在这里！！](https://juejin.cn/post/7068853819135754253)
