--- a/HTTP/03.md
+++ b/HTTP/03.md
@@ -15,15 +15,62 @@
      通过将<> '' ""等字符进行转义，移除用户输入的Style节点、Script节点、Iframe节点。 
    + **设置httponly属性**    
      在cookie中设置HttpOnly属性，使js脚本无法读取到cookie信息。
+  > 预防DOM型XSS攻击的方法：
+  1.在使用 .innerHTML、.outerHTML、document.write() 时要特别小心，不要把不可信的数据作为 HTML 插到页面上，而应尽量使用 .textContent、.   setAttribute() 等。
+  2.DOM 中的内联事件监听器，如 location、onclick、onerror、onload、onmouseover 等，\<a> 标签的 href 属性，JavaScript 的 eval()、setTimeout()、setInterval() 等，都能把字符串作为代码运行。如果不可信的数据拼接到字符串中传递给这些 API，很容易产生安全隐患，请务必避免。
+  3.如果用 Vue/React 技术栈，并且不使用 v-html/dangerouslySetInnerHTML 功能，就在前端 render 阶段避免innerHTML、outerHTML 的 XSS 隐患
+  预防 XSS 攻击其他方法：
+  1.开启CSP网页安全政策防止XSS攻击，Content-Security-Policy 中文的意思是网页安全政策，我们只需要在meta属性中设置下即可使用：如下代码： ```<meta http-equiv="Content-Security-Policy" content="">```
+  2.当下React、Vue等框架都从框架层面引入了 XSS 防御机制，一定程度上解放了我们的双手。 但是作为开发人员依然要了解 XSS 基本知识、于细节处避免制造 XSS 漏洞。
+  3.X-XSS-Protection设置，目前该属性被所有的主流浏览器默认开启XSS保护。该参数是设置在响应头中目的是用来防范XSS攻击的。
 2. **CSRF跨站请求伪造**     
-   指攻击者冒充用户发起请求（在用户不知情的情况下），完成一些违背用户意愿的事情。   
+   攻击者诱导受害者进入第三方网站，在第三方网站中，向被攻击网站发送跨站请求。利用受害者在被攻击网站已经获取的注册凭证，绕过后台的用户验证，达到冒充用户对被攻击的网站执行某项操作的目的。 
    解决方法：  
    + **token**
+     由于每次发送需要用户权限的请求都需要携带token或者将token放置在请求头的某处，浏览器不会自动携带。通常token会以本地存储的方式寄存到浏览器中，而恶意网页不具备跨域访问token的能力，自然也不能成功的执行操作，这也是现在市面上大部分API接口的使用方法
    + **Referer验证**
-     eferer 指的是页面请求来源，意思是，只接受本站的请求，服务器才做响应；如果不是，就拦截
+     eferer 指的是页面请求来源，意思是，只接受本站的请求，服务器才做响应；如果不是，就拦截。具体方案：为请求头加上一个referer字段，其指向跳转页面之前或者发送请求的那个页面url，这样服务端就知道请求源在哪里，对其进行验证即可知道是在哪个页面发送的请求，要不要为其执行操作和响应数据。
    + **使用验证码**
+     由于浏览器发送请求的时候会携带cookie，但因为攻击者在恶意网站中由于同源政策的限制，其并不可以跨域访问到另一个域下面的cookie，所以我们可以跟服务端进行协商，通过在cookie中取某一个字段作为验证的筹码，这样就可以判断请求是不是恶意发送的了，这种方法也被称为cookie双重验证。
 3. **本地存储数据泄漏**    
    解决方案：     
    + **不在本地存储重要数据**
    + **加密**   
      所有在放到cookie中的信息或者localStorage里的信息要进行加密
+
+## cookie session 与 token
+### cookie
+cookie 最开始被设计出来是为了弥补HTTP在状态管理上的不足。HTTP 协议是一个无状态协议，客户端向服务器发请求，服务器返回响应，请求就这样结束了，但是下次发请求如何让服务端知道客户端是谁呢？这种背景下，就产生了 cookie。
+**cookie 存储在客户端， cookie 是服务器发送到用户浏览器并保存在本地的一小块数据，它会在浏览器下次向同一服务器再发起请求时被携带并发送到服务器上**。
+因此，服务端脚本就可以读、写存储在客户端的cookie的值。
+cookie 是不可跨域的： 每个 cookie 都会绑定单一的域名（绑定域名下的子域都是有效的），无法在别的域名下获取使用，同域名不同端口也是允许共享使用的。
+
+<img src="https://img-blog.csdnimg.cn/2020021118314641.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3N3YWRpYW4yMDA4,size_16,color_FFFFFF,t_70" />
+### session
+session 是基于 cookie 实现的，==session 存储在服务器端，sessionId 会被存储到客户端的cookie 中==。
+实际上session 和sookie是类似的一种维持客户端和服务会话状态的技术，不过
+**session 安全性要比cookie高**，这是因为 session 的数据是存放在服务端上的，所以 session 被应用于储存一些比较隐私的数据，例如用户名密码和用户的资料等  
+服务器中的session数据是被封装在一个对象里，而这个对象会被保存在对象池中，客户端发送请求时，服务器会首先检查该请求是否包含sessionID，如果包含，服务端就会根据这个sessionID，来从对象池中获得相应的session对象，从对象中获得session的具体数据;如果没有，就会创建一个sessionId和对应的session，这个session id将被在本次响应中返回给客户端保存。具体流程如下：  
+
+<img src="https://img-blog.csdnimg.cn/20200212121540431.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3N3YWRpYW4yMDA4,size_16,color_FFFFFF,t_70"/>
+
+> cookie 与 session 的区别
+> + cookie是存储到客户端的，而session是存储到服务器端的（只有sessionID存储到服务器端的cookie中）
+> + session的安全性高于cookie
+> + Session是服务器端使用的一种记录客户端状态的机制，使用上比Cookie简单一些，相应的也增加了服务器的存储压力。
+> + 不同浏览器对cookie的数据大小限制不同，个数限制也不相同。单个cookie保存的数据不能超过4K，很多浏览器都限制一个站点最多保存20个cookie。
+
+### token
+token的全称为 Json Web Token（简称JWT），是基于Json的一个公开规范，这个规范允许我们使用JWT在用户和服务器之间传递安全可靠的信息。简单说就是**由服务端根据规范生成一个令牌（token），并且发放给客户端。此时客户端请求服务端的时候就可以携带着令牌，以令牌来证明自己的身份信息**。通过token来代表用户身份。与使用session保持登录状态不同的是，JWT不需要保存认证记录，只需保存密钥。
+
+
+##### token认证的优势
+1. **防止CSRF 攻击**
+构成这个攻击的原因，就在于 cookie + session 的鉴权方式中，鉴权数据（cookie 中 session_id）是由浏览器自动携带发送到服务端的，借助这个特性，攻击者就可以通过让用户误点攻击链接，达到攻击效果。而 token 是通过客户端本身逻辑作为动态参数加到请求中的，token 也不会轻易泄露出去，因此 token 在 CSRF 防御方面存在天然优势。
+2. **无状态**
+token 自身包含了身份验证所需要的所有信息，使得我们的服务器不需要存储 session 信息，这显然增加了系统的可用性和伸缩性，大大减轻了服务端的压力。
+3. **适合移动应用**
+移动端上不支持 cookie，而 token 只要客户端能够进行存储就能够使用，因此 token 在移动端上也具有优势。
+>总的来说token的优点是轻便,在跨域资源共享时非常方便。例如在第三方授权时，只需要将token给对方，可以对用户的信息进行保密。在用户非常多时，也非常地快捷，解密后对比token而不是在session中获取用户信息来对比。由于token具有时效性，后端也可以进行设置时效果，所有也非常安全
+
+[参考1](https://blog.csdn.net/swadian2008/article/details/104267034)
