--- a/vue3/01.md
+++ b/vue3/01.md
@@ -1,1 +1,177 @@
-Vue3学习笔记
+## Vue3升级遇到的的那些坑
+### 1.如何获取dom
+vue3取消this.$refs后，获取指定的dom，可以通过声明一个和template的ref中同名的常量变量来绑定对应的dom
+
+如下：
+```
+<template>
+  <div ref="divDom">获取ref</div>
+</template>
+
+<script setup>
+ import { ref } from 'vue'   
+ const divDom = ref(null)
+</script>
+```
+当dom元素绑定的是动态 ref 时:
+```
+<template>
+    <el-button :ref="setItemRef">动态Ref</el-button>
+</template>
+
+<script setup>
+  import { ref } from 'vue'
+    
+  // 用来保存动态的 ref 对象
+  const tableRef = ref(null)
+  // 赋值动态ref到变量
+  const setItemRef = el => {
+      if (el) {
+           tableRef.value = el
+      }
+  }
+</script>
+```
+获取for循环生成的dom
+```
+<template>
+   <div
+    v-for="item in data.testData"
+    :key="item.code"
+    :ref="(el) => { getRefDom[item.code] = el }"
+  >
+    {{ item.name }}
+  </div>
+</template>
+
+<script setup>
+import { ref, onMounted, reactive } from 'vue'
+
+const getRefDom = ref([])
+const data = reactive({
+  testData: [
+    {
+      code: 1111,
+      name: '张三',
+    },
+    {
+      code: 2222,
+      name: '李四',
+    },
+    {
+      code: 3333,
+      name: '王五',
+    },
+  ],
+})
+onMounted(() => {
+  console.log(getRefDom.value[1111])
+})
+```
+
+
+### 2.compositionAPI如何使用自定义指令
++ 局部指令
+  在vue3.2版本的setup语法糖中使用时，我们需要定义一个函数，并且这个函数必须用v开头 
+  ```
+  <template>
+    <div class="app">
+      <input type="text" v-focus />
+    </div>
+  </template>
+  <script setup>
+    const vFocus = {
+      mounted(el) {
+        el?.focus()
+      }
+    }
+  </script>
+   ```
+
+ + 全局指令
+  ```app.directive('clickoutside', clickoutside)```  
+
+
+### 3. ref 获取子组件dom，执行子组件的方法
+使用 ```<script setup>``` 语法糖的组件是默认关闭的，也即通过模板 ref 或者 $parent 链获取到的组件的公开实例，不会暴露任何在 ```<script setup>``` 中声明的绑定。
+方法：  
+使用 defineExpose 编译器宏将需要暴露出去的变量与方法放入暴露出去
+子组件：
+```
+const chooseFile = () => {
+  ..
+}
+//将该方法暴露出去
+defineExpose({
+  chooseFile
+})
+```
+父组件则可以直接通过获取dom执行该方法
+
+### 4. reactive 与 Ref
+vue2定义响应式数据是将数据定义在data中，Vue3 compositionAPI 定义响应式数据有两种方法，一个是 reactive，一个是 ref，那么他们的区别是什么呢？
++ 区别一
+  ref定义的是 RefImpl对象（也叫ref对象），reactive 定义的是 Proxy对象 
++ 区别二
+  ref 可以定义基本类型和引用类型，定义基本类型会返回  { value: 基本类型}，定义引用类型会返回 { value: Proxy对象} 
+  因此定义的ref类型的数据在使用时必须要用.value的形式访问（template中不需要）
+  ```
+  <template>
+    <div class="app">
+     {{message}}
+    </div>
+  </template>
+  <script setup>
+   const message = ref('Hello ref')
+   console.log(message.value)
+  </script>
+  ```
+reactive只能定义引用类型的数据
+  ```
+  <template>
+    <div class="app">
+     {{ data.message }}
+    </div>
+  </template>
+  <script setup>
+   const data = reactive({
+    message: 'hello reactive'
+   })
+   console.log(data.message)
+  </script>
+```
+用reactive定义的数据，当数据量很大时，template中想要避免用 data.访问数据，可以对data进行解构赋值，但这会使其失去响应性，解决方法是使用 toRefs 进行转换
+```
+<template>
+  <div class="app">
+   {{ message }}
+  </div>
+</template>
+<script setup>
+ const data = reactive({
+  message: 'hello reactive'
+ })
+ // toRefs 将 解构的message转换为了ref类型
+ const { message } = toRefs(data)
+ console.log(message.value)
+</script>
+```
+
+> 一个小坑
+> 除了对reactive进行解构赋值会使其失去响应性，对reactive直接赋值也会让他失去响应性。
+> 场景：定义一个数据用于接收后端返回的数据
+> ```let data = reactive({name:"", age:""}) ```
+> ```let res = await getUserApi()  //请求接口```
+> ```data = res.data // 直接赋值```
+> 以上写法 ×  ×  ×
+> 正确写法：
+> ```let data = reactive({ userData:{} })  //里面定义一个对象，这样赋值就不会丢失响应式了。 ```
+> ```let res = await getUserApi()  //请求接口```
+> ```data.userData = res.data // 直接赋值```
+> 或者直接使用ref定义数据
+> ``` let data = ref({})```
+> ```let res = await getUserApi()```
+> ```data = res.data```
+>
+> 原因：ref 定义数据时，都会变成 RefImpl(Ref 引用对象) 类的实例，无论是修改还是重新赋值都会调用 setter，都会经过 reactive 方法处理为响应式对象。但是 reactive 定义数据，是直接调用 reactive 方法处理成响应式对象。如果重新赋值，就会丢失原来响应式对象的引用地址，变成一个新的引用地址，这个新的引用地址指向的对象是没有经过 reactive 方法处理的，所以是一个普通对象，而不是响应式对象。解构同理。
+
