--- a/vue3/01.md
+++ b/vue3/01.md
@@ -157,21 +157,22 @@ reactive只能定义引用类型的数据
 </script>
 ```
 
-> 一个小坑
-> 除了对reactive进行解构赋值会使其失去响应性，对reactive直接赋值也会让他失去响应性。
+> 一个小坑    
+> 除了对reactive进行解构赋值会使其失去响应性，对reactive直接赋值也会让他失去响应性。   
 > 场景：定义一个数据用于接收后端返回的数据
 > ```let data = reactive({name:"", age:""}) ```
 > ```let res = await getUserApi()  //请求接口```
 > ```data = res.data // 直接赋值```
-> 以上写法 ×  ×  ×
-> 正确写法：
+> 以上写法会失去响应性 ×  ×  ×   
+> 正确写法：   
 > ```let data = reactive({ userData:{} })  //里面定义一个对象，这样赋值就不会丢失响应式了。 ```
 > ```let res = await getUserApi()  //请求接口```
 > ```data.userData = res.data // 直接赋值```
-> 或者直接使用ref定义数据
+> 或者直接使用ref定义数据    
 > ``` let data = ref({})```
 > ```let res = await getUserApi()```
 > ```data = res.data```
 >
-> 原因：ref 定义数据时，都会变成 RefImpl(Ref 引用对象) 类的实例，无论是修改还是重新赋值都会调用 setter，都会经过 reactive 方法处理为响应式对象。但是 reactive 定义数据，是直接调用 reactive 方法处理成响应式对象。如果重新赋值，就会丢失原来响应式对象的引用地址，变成一个新的引用地址，这个新的引用地址指向的对象是没有经过 reactive 方法处理的，所以是一个普通对象，而不是响应式对象。解构同理。
+> 原因：   
+> ref 定义数据时，都会变成 RefImpl(Ref 引用对象) 类的实例，无论是修改还是重新赋值都会调用 setter，都会经过 reactive 方法处理为响应式对象。但是 **reactive 定义数据，是直接调用 reactive 方法处理成响应式对象。如果重新赋值，就会丢失原来响应式对象的引用地址，变成一个新的引用地址**，这个新的引用地址指向的对象是没有经过 reactive 方法处理的，所以是一个普通对象，而不是响应式对象。解构同理。
 
