内存泄漏&浏览器并发请求限制&vue2/3双向绑定原理&getBoundingClientRect计算不准确问题

--- a/HTTP/02.md
+++ b/HTTP/02.md
@@ -1,3 +1,4 @@
+https://juejin.cn/post/7351301328206331939?searchId=20240730143312DB940641BA5A906D910D
 # 关于HTTP协议   
 ### B/S 与 C/S
 1. B/S------"Browser/Server","浏览器/服务器模式"，比如说购物网站不需要更新客服端
@@ -81,7 +82,7 @@ GET在浏览器回退时是无害的，而POST会再次提交请求。
 
 GET产生的URL地址可以被Bookmark，而POST不可以。
 
-GET请求会被浏览器主动cache，而POST不会，除非手动设置。
+GET请求会被浏览器主动cache，而POST不会，除非手动设置（在响应头中包含适当的Cache-Control或Expires字段）。
 
 GET请求只能进行url编码，而POST支持多种编码方式。
 
