性能优化更新

--- a/work/性能优化.md
+++ b/work/性能优化.md
@@ -18,26 +18,85 @@
 
 分析：
 将大的包进行拆分，一些页面用到的大组件放到页面中，不放在index中加载（提升首屏性能）
-组件使用异步加载、按需加载
 
 
-configWp.optimization.splitChunks.cacheGroups：
-当我们npm run build进行打包的时候，事实上是根据cacheGroups的默认配置进来分包并包的：
+
+#### Webpack的代码分割配置：
+
 ```
-splitChunks: {
-    chunks: "all",
-    minSize: 30000,//默认值，超过30K才独立分包
-    cacheGroups: {
-        vendors: {
-            test: /[\/]node_modules[\/]/,  // 匹配node_modules目录下的文件
-            priority: -10   // 打包优先级权重值
-        },
-        default: {
-            minChunks: 2,
-            priority: -20,   // 打包优先级权重值
-            reuseExistingChunk: true//遇到重复包直接引用，不重新打包
-        }
+configWp.optimization.splitChunks = {
+  chunks: 'all', // 指定对哪些类型的chunks应用代码分割，可选值有 'async' (默认)、'initial' 或 'all'
+  cacheGroups: {
+    vendors: { // 第三方库分离
+      test: /[\\/]node_modules[\\/]/,
+      priority: -10, // 优先级，数值越大优先级越高
+      filename: 'vendors.js', // 输出文件名
+      reuseExistingChunk: true, // 如果一个模块已经在主 chunk 里，就直接使用，不会重新生成
+    },
+    defaultVendors: { // 默认的第三方库分离
+      priority: -20,
+      test: /[\\/]node_modules[\\/]/,
+      reuseExistingChunk: true,
+    },
+    default: { // 默认分离
+      minChunks: 2, // 至少被两个chunks共享才会被打包到同一chunk
+      priority: -20,
+      reuseExistingChunk: true,
     }
-}
+  }
+};
 ```
-默认配置会将 node_mudules下的模块打包进一个叫 vendors的bundle中，所有引用超过两次(minChunks:2)的模块分配到 default的bundle中，这就是我们打包完常见的xxx.bundle.js类
+>```vendors```：这个缓存组主要用于将项目中用到的所有第三方库（位于 node_modules 中的模块）打包到单独的 vendors.js 文件中。
+```defaultVendors```：与 ```vendors``` 类似，但是优先级较低，可以用来处理一些特殊情况。
+```default```：当模块不匹配任何其他缓存组时，默认的缓存组会起作用，这里设置了至少被两个 chunks 共享的模块才会被打包到同一个 chunk 中。
+通过这种方式，你可以更好地控制Webpack如何分割代码，并且有助于提升应用的加载性能。
+
+#### webpack使用 TerserPlugin 进行JavaScript代码压缩
+```
+configWp.optimization.minimizer = [
+  new TerserPlugin({
+    terserOptions: {
+      compress: {
+        arrows: false,
+        collapse_vars: false,
+        comparisons: false,
+        computed_props: false,
+        hoist_funs: false,
+        hoist_props: false,
+        hoist_vars: false,
+        inline: false,
+        loops: false,
+        negate_iife: false,
+        properties: false,
+        reduce_funcs: false,
+        reduce_vars: false,
+        switches: false,
+        toplevel: false,
+        typeofs: false,
+        booleans: true,
+        if_return: true,
+        sequences: true,
+        unused: true,
+        conditionals: true,
+        dead_code: true,
+        evaluate: true,
+        drop_console: true, //  移除所有 console 调用。
+        drop_debugger: true, // 移除所有 debugger 语句。
+        pure_funcs: ['console.log'] // 将 console.log 视为纯函数，即在某些情况下可以安全地移除。
+      },
+      mangle: {
+        safari10: true // 使变量名称在Safari 10中兼容
+      }
+    },
+    sourceMap: false, // 不生成源映射文件
+    cache: true, // 启用缓存以加速构建过程
+    parallel: 3, // 表示并发运行3个线程进行压缩
+    extractComments: false, // 不提取注释
+    exclude: [ // 以下文件不进行压缩
+      'sysconfig.js',
+      /static/
+    ]
+  })
+];
+```
+>源映射文件（Source Map）是一种机制，它允许你在压缩后的代码中调试**原始的未压缩代码**。这对于开发和调试阶段非常有用，因为压缩后的代码通常难以阅读和调试。
